Fix modal overflow issue

--- a/punkweb_bb/static/punkweb_bb/css/punkweb-modal.css
+++ b/punkweb_bb/static/punkweb_bb/css/punkweb-modal.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 2rem;
 
   position: fixed;
   top: 0;
@@ -28,6 +29,7 @@
   border-radius: 0.25rem;
   box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.25);
   background-color: white;
+  overflow: auto;
   position: relative;
   width: fit-content;
 
